force-app/main/default/objects/Anonimyzed_Clients__c/Anonimyzed_Clients__c.object-meta.xml
<CustomObject>
    <description>To save/track Anonymized Clients</description>
    <label>Anonymized Client</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Anonymized Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>