force-app/main/default/objects/Anonimyzed_Clients__c/fields/accounts__c.field-meta.xml
<CustomField>
    <fullName>accounts__c</fullName>
    <description>Will have the info about the number of accounts affect - PS will be always 1 since the mdmId is unique</description>
    <label>Num. Account affected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>