force-app/main/default/objects/Anonimyzed_Clients__c/fields/contacts__c.field-meta.xml
<CustomField>
    <fullName>contacts__c</fullName>
    <description>Will have the number of contacts affected</description>
    <label>Num. Contact affected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>