force-app/main/default/objects/Anonimyzed_Clients__c/fields/Date_Time_of_Process__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_Process__c</fullName>
    <description>Date time when the anonymization was launched</description>
    <label>Date Time of Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>