force-app/main/default/objects/Anonimyzed_Clients__c/fields/json_body__c.field-meta.xml
<CustomField>
    <fullName>json_body__c</fullName>
    <description>JSON Body of the request</description>
    <label>JSON Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>