force-app/main/default/objects/Anonimyzed_Clients__c/fields/leads__c.field-meta.xml
<CustomField>
    <fullName>leads__c</fullName>
    <description>Will have the number of lead affected - Will be just one since the mdmId is unique</description>
    <label>Num. Lead affected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>