force-app/main/default/objects/Anonimyzed_Clients__c/fields/opps__c.field-meta.xml
<CustomField>
    <fullName>opps__c</fullName>
    <description>Will have the number of opportunity affected</description>
    <label>Num. Opportunity affected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>