force-app/main/default/objects/Anonimyzed_Clients__c/fields/sa__c.field-meta.xml
<CustomField>
    <fullName>sa__c</fullName>
    <description>Will have the number of service appointment affected</description>
    <label>Num. Service Appointment affected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>