force-app/main/default/objects/Anonimyzed_Clients__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the API</description>
    <label>Status</label>
    <length>250</length>
    <type>Text</type>
</CustomField>