force-app/main/default/objects/Anonimyzed_Clients__c/fields/Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Status_Message__c</fullName>
    <label>Status Message</label>
    <length>250</length>
    <type>Text</type>
</CustomField>