force-app/main/default/objects/Anonimyzed_Clients__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_Time_of_Process__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>